fixed scroll bouncing on safari for toolbar

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,7 @@
 .landing-grid {
   text-align: center;
   position: relative;
-  top: -8px;
+  top: -64px;
   left: 0;
   min-height: 100%;
   width: 100%;
