--- a/client/src/components/Toolbar/Toolbar.css
+++ b/client/src/components/Toolbar/Toolbar.css
@@ -1,13 +1,10 @@
 .toolbar {
-  position: fixed;
+  position: sticky;
   top: 0;
   left: 0;
   width: 100%;
   background: #393f4d;
   height: 56px; 
-/*  background: #833ab4; */ /*fallback for old browsers */
-/*  background: -webkit-linear-gradient(to right, #fcb045, #fd1d1d, #833ab4); */ /* Chrome 10-25, Safari 5.1-6 */
-/*  background: linear-gradient(to right, #fcb045, #fd1d1d, #833ab4); *//* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   z-index: 300;
   background: #00c6ff;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #0072ff, #00c6ff);  /* Chrome 10-25, Safari 5.1-6 */
@@ -57,12 +54,14 @@
   color: #feda6a;
 }
 
+/*Display for small screens*/
 @media (max-width: 768px) {
   .toolbar_navigation-items{
      display: none;
  }
 }
 
+/*Display for large screens*/
 @media (min-width: 769px) {
   .toolbar__toggle-button {
     display: none;
